<resources>
    <!--    Bottom bar Tab's names-->
    <string name="app_name">Sugar Hunter</string>
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>

    <!--    Team Fragment Strings-->
    <string name="team">Команда</string>
    <string name="team_author_title">Над приложением работали</string>
    <string name="team_author1">Михаил Шумихин</string>
    <string name="team_author2">Мария Кузнецова</string>
    <string name="team_author3">Максим Юрищев</string>
    <string name="team_author4">Денис Кузьмин</string>

    <!--    Search Fragment Strings-->
    <string name="search">Поиск вакансий</string>
    <string name="search_edittext_hint">Введите запрос</string>
    <string name="search_error">Не удалось получить список вакансий</string>
    <string name="search_error_no_internet">Нет интернета</string>
    <string name="search_error_no_vacancies">Таких вакансий нет</string>

    <!--    Favourite Fragment Strings-->
    <string name="favourite_empty">Список пуст</string>
    <string name="favourite_error">Не удалось получить список вакансий</string>

    <!--    Vacancy Fragment Strings-->
    <string name="vacancy_fragment_header">Вакансия</string>
    <string name="experience_header">Требуемый опыт</string>
    <string name="about_job_header">Описание вакансии</string>
    <string name="responsibilities_header">Обязанности</string>
    <string name="requirements_header">Требования</string>
    <string name="conditions_header">Условия</string>
    <string name="keySkills_header">Ключевые навыки</string>
    <string name="contacts_header">Контакты</string>
    <string name="contact_face_header">Контактное лицо</string>
    <string name="contact_email_header">E-mail</string>
    <string name="contact_phone_header">Телефон</string>
    <string name="contact_comments_header">Комментарий</string>
    <string name="vacancy_fragment_placeholder_text">Ошибка сервера</string>
    <string name="no_salary_string">Зарплата не указана</string>

    <!--    Filter Fragment Strings-->
    <string name="filter_screen_header">Настройки фильтрации</string>
    <string name="select_region_button">Место работы</string>
    <string name="select_industry_button">Отрасль</string>
    <string name="salary_card_header">Ожидаемая зарплата</string>
    <string name="salary_hint">Введите сумму</string>
    <string name="salary_checkbox_hint">Не показывать без зарплаты</string>
    <string name="decline_button">Сбросить</string>
    <string name="apply_button">Применить</string>


    <!--    ChoicePlace Fragment Strings-->
    <string name="choice_place_screen_header">Выбор места работы</string>
    <string name="select_country_header">Страна</string>
    <string name="select_region_header">Область</string>
    <string name="apply_choice_button_place">Выбрать</string>

    <!--    ChoiceCountry Fragment Strings-->
    <string name="choice_country_fragment_header">Выбор страны</string>

    <!--    ChoiceCountry Fragment Strings-->
    <string name="choice_region_fragment_header">Выбор региона</string>
    <string name="region_input_edittext">Введите регион</string>
    <string name="region_no_found">Такого региона нет</string>
    <string name="error_region">Не удалось получить список</string>
    <string name="get_list_failure">Не удалось получить\nсписок</string>
    <string name="no_region">Такого региона нет</string>

    <!--    ChoiceIndustry Fragment Strings-->
    <string name="choice_industry_header">Выбор отрасли</string>
    <string name="search_industry_text">Введите отрасль</string>
    <string name="nothing_industry">Такой отрасли нет</string>
    <string name="exit_message">Если хотите выйти из приложения,\nнажмите \"Назад\" еще раз</string>

    <plurals name="vacancy_plurals">
        <item quantity="zero">Вакансий не найдено</item>
        <item quantity="one">Найдена %1$d вакансия</item>
        <item quantity="two">Найдено %1$d вакансии</item>
        <item quantity="few">Найдено %1$d вакансии</item>
        <item quantity="many">Найдено %1$d вакансий</item>
        <item quantity="other">Найдено %1$d вакансии</item>
    </plurals>

</resources>
