<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.team.TeamFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16dp" />


    <TextView
        android:id="@+id/vacancyScreenTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:text="@string/team"
        android:textColor="?attr/prime_color_black"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamAuthorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/team_author_title"
        android:textColor="?attr/prime_color_black"
        android:textSize="@dimen/text_size_32sp"
        android:paddingTop="@dimen/margin_24dp"
        android:paddingBottom="@dimen/padding_16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toBottomOf="@id/vacancyScreenTitle" />

    <TextView
        android:id="@+id/teamMember1"
        android:text="@string/team_author1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toBottomOf="@id/teamAuthorTitle"
        style="@style/teamMemberStyle" />

    <TextView
        android:id="@+id/teamMember2"
        android:text="@string/team_author2"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toBottomOf="@id/teamMember1"
        style="@style/teamMemberStyle" />

    <TextView
        android:id="@+id/teamMember3"
        android:text="@string/team_author3"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toBottomOf="@id/teamMember2"
        style="@style/teamMemberStyle" />

    <TextView
        android:id="@+id/teamMember4"
        android:text="@string/team_author4"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/endBorder16"
        app:layout_constraintStart_toStartOf="@id/startBorder16"
        app:layout_constraintTop_toBottomOf="@id/teamMember3"
        style="@style/teamMemberStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
