<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.search.SearchFragment">


    <TextView
        android:id="@+id/teamTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:lineHeight="@dimen/text_line_height_26dp"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_19dp"
        android:paddingEnd="@dimen/margin_8dp"
        android:paddingBottom="@dimen/margin_19dp"
        android:text="@string/search"
        android:textColor="?attr/prime_color_black"
        android:textFontWeight="500"
        android:textSize="@dimen/textSize_22sp"
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/teamTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableLeftCompat="@drawable/search_filter"
        android:paddingBottom="@dimen/padding_20dp"
        android:paddingTop="@dimen/padding_20dp"
        android:paddingRight="@dimen/padding_20dp"
        android:paddingLeft="@dimen/padding_20dp"/>

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/teamTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginVertical="@dimen/margin_8dp"
        android:paddingHorizontal="@dimen/padding_16dp"
        android:background="@drawable/search_edittext_shape"
        android:drawableEnd="@drawable/search_icon"
        android:hint="@string/search_edittext_hint"
        android:textColorHint="?attr/secondary_dark_gray"
        android:textColor="@color/Black_Universal"
        android:fontFamily="@font/ys_display_regular"
        android:lineHeight="@dimen/text_line_height_19dp"
        android:textSize="@dimen/textSize_16sp"
        android:textCursorDrawable="@drawable/search_edittext_color_cursor"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/padding_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_chip_shape"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingVertical="@dimen/padding_4dp"
            android:textColor="@color/White_Universal"
            android:lineHeight="@dimen/text_line_height_19dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/placeholder_search"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="223dp"
            android:src="@drawable/placeholder_search"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminateTint="@color/Blue"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/something_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:src="@drawable/placeholder_something_wrong"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/search_error"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/textSize_22sp"
                android:lineHeight="@dimen/text_line_height_26dp"
                android:textColor="?attr/prime_color_black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:src="@drawable/placeholder_noethernet"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/search_error_no_internet"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/textSize_22sp"
                android:lineHeight="@dimen/text_line_height_26dp"
                android:textColor="?attr/prime_color_black"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
